--- a/index.html
+++ b/index.html
@@ -30,12 +30,12 @@
 		<title>旅のしおり</title>
 	</head>
 	<body>
-		<header>
+		<header id="header">
 			<div class="wrap">
 				<h2 class="title">
 					<input id="title_input" class="title_input" placeholder="旅のタイトル" maxlength="30">
 				</h2>
-				<a id="image_modal_btn" href="javascript:void(0);" class="change"><span>背景画像を変更する<input type="file" name="userfile" accept="image/*"></span></a>
+				<a id="image_modal_btn" href="javascript:void(0);" class="change"><span>背景画像を変更する<input type="file"></span></a>
 				<!-- <p class="gaiyo summary_block" id="summary_block">
 					<span id="summary_view" class="summary_view"></span>
 					<textarea id="summary_input" class="summary_input" placeholder="旅のこだわり（100文字まで）　例）夏休み女子3人旅　絶景ビーチ＆おいしい沖縄のカフェめぐり">
