--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 	<!-- js -->
 	<script type="text/javascript" src="js/script.js"></script>
 	<script type="text/javascript"  src="js/combodate.js"></script> 
+	<!-- input タグで画像を選んだら即時にプレビューを表示するプラグイン -->
 	<script type="text/javascript"  src="js/jquery.iPreview.min.js"></script>
 
 	<!-- css -->
